회원가입 정보입력 rest api 연동 및 회원가입 기능 테스트 완료 commit

--- a/package.json
+++ b/package.json
@@ -37,5 +37,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "proxy" : {
+    "/signup/" : {
+      "target" : "http://10.58.6.55:8000/user/"
+    },
+    "/login/" : {
+      "target" : "http://10.58.6.245"
+    }
   }
 }
