--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-select": "^3.1.0",
+    "select": "^1.1.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
