--- a/package.json
+++ b/package.json
@@ -37,5 +37,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy" : "http://10.58.6.245:8000/user/login"
 }
