--- a/src/config.json
+++ b/src/config.json
@@ -1,9 +1,4 @@
 {
-  "SignUp": {
-      "uri": "http://10.58.6.55:8000/user/",
-      "signup" : "signup",
-      "email" : "email",
-      "checkid" : "signupid"
-      
-  }
+  "signup":"http://10.58.4.38:8000/user/signup",
+  "MAIN_URL": "http://10.58.2.123:8000/products"
 }
