--- a/src/config.json
+++ b/src/config.json
@@ -1,3 +1,4 @@
 {
-  "MAIN_URL": "http://10.58.2.123:8000/products"
+  "MAIN_URL": "http://10.58.2.123:8000/products",
+  "LOGIN" : "http://10.58.1.4:8000/user/login"
 }
