--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,8 @@
 {
   "REVIEW": "http://10.58.2.208:8000/review",
   "REVIEW-MOCK-DATA": "http://localhost:3000/data/MOCK_DATA.json",
-  "SIGNUP": "http://10.58.4.38:8000/user/signup",
+  "SIGNUP": "http://10.58.7.141:8000/user/signup",
   "MAIN_URL": "http://10.58.2.123:8000/products",
-  "LOGIN":"http://10.58.5.121:8000/user/login"
+  "LOGIN":"http://10.58.7.141:8000/user/login",
+  "MYCART":"http://10.58.5.184:8000"
 }
