디테일 페이지 기능 구현 마무리

--- a/src/config.json
+++ b/src/config.json
@@ -3,5 +3,6 @@
   "REVIEW-MOCK-DATA": "http://localhost:3000/data/MOCK_DATA.json",
   "SIGNUP": "http://10.58.4.38:8000/user/signup",
   "MAIN_URL": "http://10.58.5.224:8000/products",
-  "DETAILITEM_URL": "http://10.58.5.224:8000/products"
+  "DETAILITEM_URL": "http://10.58.5.224:8000/products",
+  "GUESTHOUSE_URL": "http://192.168.200.156:8000/products"
 }
